@@ -1,3 +1,4 @@
+* Add length.out argument to gslider, gspinbutton
 * argument to gbutton for icon_only (like compound in tcltk text, icon, both...)
 * editable<- method (used in gedit), where else?
 * STARTED. Wish list: roxygen docs on methods; add classes
