@@ -1,5 +1,9 @@
 2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
+	* DESCRIPTION (Version): version bump (45)
+
+	* R/gcalendar.R: fixed gcalendar. It had issues when used within glayout.b
+
 	* R/aaaR5classes.R: fix to gradio if items is logical
 
 	* R/aaaGenerics.R: added ".add" method for tkwin objects. This
