@@ -1,3 +1,7 @@
+2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* DESCRIPTION (Version): version bump
+
 2011-04-07  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* man/gWidgets-methods.Rd: put in new methods editable[<-]. Can be
